# System-management-mini_project

./: CMakeLists.txt  README.md  Vehicle.cpp  Vehicle.h  insert_data.py  main.cpp
database/: create_fleet_database.sql  flotte_schema.sql
